--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.clearcreekcode.flashlight" >
+    package="com.clearcreekcode.tapflashlight" >
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".FlashlightActivity"
+            android:name="com.clearcreekcode.tapflashlight.FlashlightActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
             <intent-filter>
